--- a/src/app/rest-tabs/rest-tabs.page.html
+++ b/src/app/rest-tabs/rest-tabs.page.html
@@ -1,17 +1,17 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
+    <ion-tab-button tab="novo-pedido">
       <ion-icon name="triangle"></ion-icon>
       <ion-label>Novo Pedido</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
+    <ion-tab-button tab="carrinho">
       <ion-icon name="ellipse"></ion-icon>
       <ion-label>Carrinho</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
+    <ion-tab-button tab="pedidos">
       <ion-icon name="square"></ion-icon>
       <ion-label>Pedidos</ion-label>
     </ion-tab-button>
