--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -3,7 +3,12 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
       <ion-icon name="triangle"></ion-icon>
-      <ion-label>Pedidos Abertos</ion-label>
+      <ion-label> Novos Pedidos</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="tab3">
+      <ion-icon name="square"></ion-icon>
+      <ion-label>Suas ofertas</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
@@ -11,10 +16,6 @@
       <ion-label>Negociação</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
-      <ion-icon name="square"></ion-icon>
-      <ion-label>Criar oferta</ion-label>
-    </ion-tab-button>
 
     <ion-tab-button>
       <ion-icon name="ellipse"></ion-icon>
