--- a/src/app/carrinho/carrinho.page.html
+++ b/src/app/carrinho/carrinho.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>carrinho</ion-title>
+    <ion-title>Carrinho</ion-title>
   </ion-toolbar>
 </ion-header>
 
